--- a/pages/welcome.html
+++ b/pages/welcome.html
@@ -1,18 +1,56 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
-<div class="px-4 py-5 my-5 text-center">
-    <div class="d-block mx-auto mb-4" style="font-size: 5rem;">🏫</div>
-    <h1 class="display-5 fw-bold">Schul-Datenportal für Berlin</h1>
-    <div class="col-lg-6 mx-auto">
-        <p class="lead mb-4">
-            Ein wenig Text kommt noch.
-        </p>
-        <p class="lead mb-4">
-            ✳️ Punkte
-        </p>
-        <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-            <a class="btn btn-dark btn-lg px-4 gap-3" href="/list" role="button">Liste</a>
+<div class="px-4 py-4 text-center">
+    <h1 class="display-5 fw-bold">Ein Schul-Datenportal für Berlin</h1>
+</div>
+
+<div class="container">
+    <div class="row">
+        <div class="col text-center">
+            <img src="../assets/undraw_back_to_school_inwc.svg" class="img-fluid">
+        </div>
+        <div class="col">
+            Die Senatsverwaltung für Bildung, Jugend und Familie gibt jede Woche neue Informationen und Daten heraus.
+            Diese Transparenzoffensive möchten wir unterstützen und stellen dieses Datenportal als ergänzende Unterstützung bereit.
+        </div>
+    </div>
+
+    <div class="row mt-5">
+        Das Portal wird im Ehrenamt betrieben.
+        Erstellt in Berin - für Berlin.
+    </div>
+
+    <div class="row mt-5">
+        <div class="col">
+            Jeder Datensatz enthält einen Link zum Original-Artikel oder zum PDF-Dokument.
+            Zusätzlich stehen zusammenfassende Information für eine Suche bereit.
+            Schlagwörter erleichtern das Filtern der Informationen.
+        </div>
+        <div class="col text-center">
+            <img src="../assets/undraw_post_re_mtr4.svg" class="img-fluid">
+        </div>
+    </div>
+
+    <div class="row mt-5">
+        <div class="col text-center">
+            <img src="../assets/undraw_team_collaboration_re_ow29.svg" class="img-fluid">
+        </div>
+        <div class="col">
+            Lasst uns gemeinsam die bereitgestellten Informationen verbessern.
+            Die PDF-Dateien möchten alle zurück-digitalisiert werden.
+            Alle Daten werden für alle frei zugänglich bereit gestellt.
+        </div>
+    </div>
+
+    <div class="row mt-5">
+        Aber jetzt geht's los.
+        Folge dem Link und schau in das Portal rein.
+    </div>
+
+    <div class="row mt-5">
+        <div class="col-lg-6 mx-auto text-center">
+            <a class="btn btn-dark btn-lg px-4 gap-3" style="background: #e1306c; border-color: #e1306c;" href="/list" role="button">Folge mir</a>
         </div>
     </div>
 </div>
