--- a/pages/welcome.html
+++ b/pages/welcome.html
@@ -8,7 +8,7 @@
 <div class="container">
     <div class="row">
         <div class="col text-center">
-            <img src="assets/undraw_back_to_school_inwc.svg" class="img-fluid">
+            <img src="./assets/undraw_back_to_school_inwc.svg" class="img-fluid">
         </div>
         <div class="col">
             Die Senatsverwaltung für Bildung, Jugend und Familie gibt jede Woche neue Informationen und Daten heraus.
@@ -28,13 +28,13 @@
             Schlagwörter erleichtern das Filtern der Informationen.
         </div>
         <div class="col text-center">
-            <img src="assets/undraw_post_re_mtr4.svg" class="img-fluid">
+            <img src="./assets/undraw_post_re_mtr4.svg" class="img-fluid">
         </div>
     </div>
 
     <div class="row mt-5">
         <div class="col text-center">
-            <img src="assets/undraw_team_collaboration_re_ow29.svg" class="img-fluid">
+            <img src="./assets/undraw_team_collaboration_re_ow29.svg" class="img-fluid">
         </div>
         <div class="col">
             Lasst uns gemeinsam die bereitgestellten Informationen verbessern.
