--- a/pages/welcome.html
+++ b/pages/welcome.html
@@ -28,13 +28,13 @@
             Schlagwörter erleichtern das Filtern der Informationen.
         </div>
         <div class="col text-center">
-            <img src="/assets/undraw_post_re_mtr4.svg" class="img-fluid">
+            <img src="assets/undraw_post_re_mtr4.svg" class="img-fluid">
         </div>
     </div>
 
     <div class="row mt-5">
         <div class="col text-center">
-            <img src=".,/assets/undraw_team_collaboration_re_ow29.svg" class="img-fluid">
+            <img src="assets/undraw_team_collaboration_re_ow29.svg" class="img-fluid">
         </div>
         <div class="col">
             Lasst uns gemeinsam die bereitgestellten Informationen verbessern.
@@ -50,7 +50,7 @@
 
     <div class="row mt-5">
         <div class="col-lg-6 mx-auto text-center">
-            <a class="btn btn-dark btn-lg px-4 gap-3" style="background: #e1306c; border-color: #e1306c;" href="/list" role="button">Folge mir</a>
+            <a class="btn btn-dark btn-lg px-4 gap-3" style="background: #e1306c; border-color: #e1306c;" href="list" role="button">Zu den Daten</a>
         </div>
     </div>
 </div>
