--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script defer=defer src="https://unpkg.com/peacock-user-ui@latest/dist/js/app.js"></script>
     <link href="https://unpkg.com/peacock-user-ui@latest/dist/css/app.vendors.css" rel=stylesheet>
     <link href="https://unpkg.com/peacock-user-ui@latest/dist/css/app.css" rel=stylesheet>
+    <link href="assets/custom.css" rel=stylesheet>
 </head>
 <body>
     <div id=app>
