--- a/datasets/404.html
+++ b/datasets/404.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset=utf-8>
     <meta name=viewport content="width=device-width,initial-scale=1">
-    <link rel="shortcut icon" type=image/ico href=assets/favicon.ico>
+    <link rel="shortcut icon" type=image/ico href=../assets/favicon.ico>
     <title>Peacock</title>
 
     <link rel=stylesheet type=text/css href="https://unpkg.com/peacock-user-ui@latest/dist/css/app.loadinganimation.css">
@@ -11,7 +11,7 @@
     <script defer=defer src="https://unpkg.com/peacock-user-ui@latest/dist/js/app.js"></script>
     <link href="https://unpkg.com/peacock-user-ui@latest/dist/css/vendors.css" rel=stylesheet>
     <link href="https://unpkg.com/peacock-user-ui@latest/dist/css/app.css" rel=stylesheet>
-    <link href="assets/custom.css" rel=stylesheet>
+    <link href="../assets/custom.css" rel=stylesheet>
 </head>
 <body>
     <div id=app>
@@ -21,6 +21,6 @@
             </div>
         </app>
     </div>
-    <script src="js/custom.js"></script>
+    <script src="../js/custom.js"></script>
 </body>
 </html>
