try 'hash' router mode

--- a/pages/welcome.html
+++ b/pages/welcome.html
@@ -50,7 +50,7 @@
 
     <div class="row mt-5">
         <div class="col-lg-6 mx-auto text-center">
-            <a class="btn btn-dark btn-lg px-4 gap-3" style="background: #e1306c; border-color: #e1306c;" href="list" role="button">Zu den Daten</a>
+            <a class="btn btn-dark btn-lg px-4 gap-3" style="background: #e1306c; border-color: #e1306c;" href="#/list" role="button">Zu den Daten</a>
         </div>
     </div>
 </div>
