change naming 'data' to 'transparency' / 'entry'

--- a/pages/welcome.html
+++ b/pages/welcome.html
@@ -2,7 +2,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
 <div class="px-4 py-4 text-center">
-    <h1 class="display-5 fw-bold">Ein Schul-Datenportal für Berlin</h1>
+    <h1 class="display-5 fw-bold">Ein Schul-Transparenzportal für Berlin</h1>
 </div>
 
 <div class="container">
@@ -12,7 +12,7 @@
         </div>
         <div class="col">
             Die Senatsverwaltung für Bildung, Jugend und Familie gibt jede Woche neue Informationen und Daten heraus.
-            Diese Transparenzoffensive möchten wir unterstützen und stellen dieses Datenportal als ergänzende Unterstützung bereit.
+            Diese Transparenzoffensive möchten wir unterstützen und stellen dieses Transparenzportal als ergänzende Unterstützung bereit.
         </div>
     </div>
 
