add a footer and an imprint page

--- a/pages/welcome.html
+++ b/pages/welcome.html
@@ -18,7 +18,7 @@
 
     <div class="row mt-5">
         Das Portal wird im Ehrenamt betrieben.
-        Erstellt in Berin - für Berlin.
+        Erstellt in Berlin - für Berlin.
     </div>
 
     <div class="row mt-5">
@@ -48,9 +48,9 @@
         Folge dem Link und schau in das Portal rein.
     </div>
 
-    <div class="row mt-5">
+    <div class="row mt-5 mb-5">
         <div class="col-lg-6 mx-auto text-center">
-            <a class="btn btn-dark btn-lg px-4 gap-3" style="background: #e1306c; border-color: #e1306c;" href="#/list" role="button">Zu den Daten</a>
+            <a class="btn btn-secondary btn-lg px-4 gap-3" href="#/list" role="button">Zu den Daten</a>
         </div>
     </div>
 </div>
