change mail address

--- a/pages/imprint.html
+++ b/pages/imprint.html
@@ -15,7 +15,7 @@
             Thomas Tursics<br>
             Straße 76a, 6b<br>
             13127 Berlin<br><br>
-            E-Mail an schulportal.be845e47@tursics.de<br>
+            E-Mail an beta.version@schulportal.berlin<br>
             Twitter <a href="https://twitter.com/tursics" class="link-dark" target="_blank">@tursics</a><br>
             GitHub <a href="https://github.com/tursics/schule-datenportal/" class="link-dark" target="_blank">@tursics/schule-datenportal</a>
         </div>
