--- a/pages/welcome.html
+++ b/pages/welcome.html
@@ -2,7 +2,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
 <div class="px-4 py-4 text-center">
-    <h1 class="display-5 fw-bold">Ein Schul-Transparenzportal für Berlin</h1>
+    <h1 class="display-5 fw-bold">Ein Schul-<span class="logo-1a">Transp</span><span class="logo-2a">D</span>a<span class="logo-1b">r</span><span class="logo-2b">t</span>en<span class="logo-1c">z</span>portal für Berlin</h1>
 </div>
 
 <div class="container">
